# UNLZ-Agent

./: .env.example  .gitignore  1_install.bat  2_start.bat  3_start_new.bat  3_start_new.bat - Acceso directo.lnk  4_build_exe.bat  Building  Generando  Next-Steps.md  Next-Steps_ES.md  README.md  README_EN.md  README_ES.md  Syncing  agent_server.py  build-portable.ps1  build_exe.bat  config.py  hub_catalog.py  mcp_server.py  n8n_workflow.json  opencode_1_catalog.py  project_documentation.md  requirements.txt  setup_guide.md  setup_guide_ES.md  start-desktop.ps1
.github/workflows/: quality-gates.yml
data/: newbie_profile.json
data/.unlz_internal/: router_metrics.jsonl  task_router.json
desktop/: Building  index.html  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  code_map.md  decisions.md  flows.md  newbie_qa_checklist.md
docs/adr/: 0001-agent-runtime-observability.md  0004-model-hub.md  0006-behavior-llamacpp-overrides.md  README.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
guardrails/: validator.py
old/: .env.example  AGENTS.md  Building  Ensuring  Next-Steps.md  Next-Steps_ES.md  agent_server.py  build-portable.ps1  config.py  inspect_mcp.py  project_documentation.md  setup-desktop.ps1
rag_pipeline/: factory.py  ingest.py  retriever.py
tests/: test_newbie_endpoints.py
(+54 files in other folders)
