[package]
name = "unlz-agent"
version = "0.1.0"
description = "UNLZ Agent — Local AI assistant desktop"
authors = ["UNLZ"]
edition = "2021"

[lib]
name = "unlz_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
